--- a/WebApplication1/Properties/launchSettings.json
+++ b/WebApplication1/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:8000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_PASSWORD": "@BiswashNK#1"
       }
     },
     "IIS Express": {
